new schedule instruction, recipes

--- a/src/main/resources/assets/create_jp_signal/lang/en_us.json
+++ b/src/main/resources/assets/create_jp_signal/lang/en_us.json
@@ -1,13 +1,93 @@
 {
-    "block.create_jp_signal.color_single_round_signal_mast": "Color Round Signal Mast",
-    "block.create_jp_signal.color_single_square_signal_mast": "Color Square Signal Mast",
-    "block.create_jp_signal.color_single_tunnel_signal_mast": "Color Tunnel Signal Mast",
-    "block.create_jp_signal.repeater_single_signal_mast": "Repeater Signal Mast",
-    "block.create_jp_signal.repeater_single_tunnel_signal_mast": "Repeater Tunnel Signal Mast",
-    "block.create_jp_signal.shunt_single_signal_mast": "Shunt Signal Mast",
-    "itemGroup.jpsignal" : "Create Japanese Signals",
-    "tooltip.create_jp_signal.selected_signal": "Selected: %s",
-    "tooltip.create_jp_signal.selected_signal_default": "Selected: Default",
-    "tooltip.create_jp_signal.signal_tool.instructions": "Hold [Shift] for details",
-    "tooltip.create_jp_signal.signal_tool.shift_instructions": "Shift + Left Click Air to select signal type."
+    "block.create_jp_signal.color_single_round_signal_mast": "Japanese Color Signal (Rounded, Mast)",
+    "block.create_jp_signal.color_single_square_signal_mast": "Japanese Color Signal (Square, Mast)",
+    "block.create_jp_signal.color_single_tunnel_signal_mast": "Japanese Color Signal (Tunnel, Mast)",
+    "block.create_jp_signal.repeater_single_signal_mast": "Japanese Repeater Signal (Mast)",
+    "block.create_jp_signal.repeater_single_tunnel_signal_mast": "Japanese Repeater Signal (Tunnel, Mast)",
+    "block.create_jp_signal.shunt_single_signal_mast": "Japanese Shunt Signal (Mast)",
+    "block.create_jp_signal.signal_mast": "Signal Mast",
+    "block.create_jp_signal.control_box": "Signal Controller",
+    "block.create_jp_signal.signal_repeater": "Signal Repeater",
+    "item.create_jp_signal.signal_configurator": "Signal Configurator",
+    "item.create_jp_signal.signal_mast_with_signal": "Signal With Signal Mast",
+    "itemGroup.create_jp_signal" : "Create Japanese Signals",
+    "create_jp_signal.gui.control_box.instruction": "Please link to signal",
+    "create_jp_signal.gui.control_box.signal_type": "Type: %s",
+    "create_jp_signal.gui.control_box.purple_lamp": "Repeater",
+    "create_jp_signal.gui.control_box.accessory": "Acc.: %s",
+    "create_jp_signal.gui.control_box.add_rule": "+ Add rule",
+    "create_jp_signal.gui.control_box.save": "Save",
+    "create_jp_signal.gui.control_box.cancel": "Cancel",
+    "create_jp_signal.gui.select_signal_mast.title": "Signal Type Selection",
+    "create_jp_signal.gui.signal_link.link_button": "Link to %s signal",
+    "create_jp_signal.gui.signal_link.already_linked": " (already linked)",
+    "create_jp_signal.block_entity.control_box.name": "Signal Control Box",
+    "create_jp_signal.block_entity.control_box.source_list": "Source list",
+    "create_jp_signal.block_entity.control_box.selected": "Selected: %s",
+    "create_jp_signal.block_entity.base_signal.menu": "Slot Selection",
+    "create_jp_signal.item.signal_item.selected_signal": "Selected: %s",
+    "create_jp_signal.item.signal_item.open_gui_instruction": "[%s]+[%s] to select signal type",
+    "create_jp_signal.item.signal_item.none": "None",
+    "create_jp_signal.item.signal_configurator.link_cancel": "Link mode is canceled.",
+    "create_jp_signal.item.signal_configurator.control_box_not_found": "Control box not found.",
+    "create_jp_signal.item.signal_configurator.index_link": "Source linked.",
+    "create_jp_signal.item.signal_configurator.not_target": "Not a target block. Maintain link mode.",
+    "create_jp_signal.item.signal_configurator.selected": "Selected: %s",
+    "create_jp_signal.network.signal_link.success": "Signal link successful.",
+    "create_jp_signal.network.signal_link.fail": "Signal link failed.",
+    "create_jp_signal.signal.signal_aspect.aspect.common.all": "All on",
+    "create_jp_signal.signal.signal_aspect.aspect.common.off": "All off",
+    "create_jp_signal.signal.signal_aspect.aspect.color.R": "R",
+    "create_jp_signal.signal.signal_aspect.aspect.color.YY": "YY",
+    "create_jp_signal.signal.signal_aspect.aspect.color.Y": "Y",
+    "create_jp_signal.signal.signal_aspect.aspect.color.YG": "YG",
+    "create_jp_signal.signal.signal_aspect.aspect.color.YGF": "YGF",
+    "create_jp_signal.signal.signal_aspect.aspect.color.G": "G",
+    "create_jp_signal.signal.signal_aspect.aspect.color.GG": "GG",
+    "create_jp_signal.signal.signal_aspect.aspect.repeater.stop": "Stop",
+    "create_jp_signal.signal.signal_aspect.aspect.repeater.restricted": "Restricted",
+    "create_jp_signal.signal.signal_aspect.aspect.repeater.proceed": "Proceed",
+    "create_jp_signal.signal.signal_aspect.aspect.repeater.high_speed_proceed": "High-speed",
+    "create_jp_signal.signal.signal_aspect.aspect.shunt.stop": "Stop",
+    "create_jp_signal.signal.signal_aspect.aspect.shunt.caution": "Caution",
+    "create_jp_signal.signal.signal_aspect.aspect.shunt.proceed": "Proceed",
+    "create_jp_signal.signal.color.type.2YR": "2-lamp(YR)",
+    "create_jp_signal.signal.color.type.2GR": "2-lamp(GR)",
+    "create_jp_signal.signal.color.type.2GY": "2-lamp(GY)",
+    "create_jp_signal.signal.color.type.3": "3-lamp",
+    "create_jp_signal.signal.color.type.4A": "4-lamp A",
+    "create_jp_signal.signal.color.type.4B": "4-lamp B",
+    "create_jp_signal.signal.color.type.5A": "5-lamp A",
+    "create_jp_signal.signal.color.type.5B": "5-lamp B",
+    "create_jp_signal.signal.color.type.6": "6-lamp",
+    "create_jp_signal.signal.color.backplate_type.round": "Rounded",
+    "create_jp_signal.signal.color.backplate_type.square": "Square",
+    "create_jp_signal.signal.color.backplate_type.none": "None",
+    "create_jp_signal.signal.repeater.type.single": "Normal",
+    "create_jp_signal.signal.repeater.type.double": "High-speed",
+    "create_jp_signal.signal.shunt.type.2W": "2-aspect(W)",
+    "create_jp_signal.signal.shunt.type.2R": "2-aspect(R)",
+    "create_jp_signal.signal.shunt.type.3W": "3-aspect(W)",
+    "create_jp_signal.signal.shunt.type.3R": "3-aspect(R)",
+    "create_jp_signal.signal.accesory.type.none": "None",
+    "create_jp_signal.signal.accesory.type.forecast": "Forecaster",
+    "create_jp_signal.signal.accesory.type.indicator_home": "Indicator (home)",
+    "create_jp_signal.signal.accesory.type.indicator_departure": "Indicator (departure)",
+    "create_jp_signal.signal.accesory.type.indicator_shunt": "Indicator (shunt)",
+    "create_jp_signal.signal.accesory.route.none": "None",
+    "create_jp_signal.signal.accesory.route.center": "Center",
+    "create_jp_signal.signal.accesory.route.left": "Left",
+    "create_jp_signal.signal.accesory.route.right": "Right",
+    "create_jp_signal.schedule.instruction.operation_type": "Change Operation Type",
+    "create_jp_signal.schedule.instruction.operation_type.train": "Train",
+    "create_jp_signal.schedule.instruction.operation_type.shunt": "Shunt",
+    "create_jp_signal.schedule.instruction.operation_type.summary": "Operation Type: %s",
+    "create_jp_signal.schedule.instruction.operation_type.name": "Operation Type",
+    "create_jp_signal.schedule.instruction.operation_type.tooltip.0": "Operation Type",
+    "create_jp_signal.schedule.instruction.operation_type.tooltip.1": "Corresponding signal responds",
+    "create_jp_signal.schedule.instruction.minimum_reservation_distance": "Change Minimum Reservation Distance",
+    "create_jp_signal.schedule.instruction.minimum_reservation_distance.summary": "Reservation Distance: %s",
+    "create_jp_signal.schedule.instruction.minimum_reservation_distance.name": "Minimum Reservation Distance",
+    "create_jp_signal.schedule.instruction.minimum_reservation_distance.tooltip.0": "Minimum Reservation Distance",
+    "create_jp_signal.schedule.instruction.minimum_reservation_distance.tooltip.1": "reservation distance = min(this, braking distance)"
 }
